[package]
name = "chubby_server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
prost = "0.9"
tokio = { version = "1", features = ["full"] }
tonic = "0.6"

[build-dependencies]
tonic-build = { version = "0.6", features = ["rustfmt"] }

[[bin]]
name = "server"
path = "src/server.rs"
