[package]
name = "chubby_server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["prost-codec", "default-logger"]
# Enable failpoints
failpoints = ["fail/failpoints"]
prost-codec = ["raft-proto/prost-codec"]
default-logger = ["slog-stdlog", "slog-envlogger", "slog-term"]

[dependencies]
atomic-counter = "1.0.1"
prost = "0.9"
prost-types = "0.9"
tokio = { version = "1", features = ["full"] }
tonic = "0.6"
raft = "0.6"
bytes = { version = "1", optional = true }
fxhash = "0.2.1"
fail = { version = "0.4", optional = true }
getset = "0.1.1"
protobuf = "2"
thiserror = "1.0"
raft-proto = { path = "proto", version = "0.7.0", default-features = false }
rand = "0.8"
slog = { version = "2.2", features = ["max_level_off", "release_max_level_off"] }
slog-envlogger = { version = "2.1.0", optional = true }
slog-stdlog = { version = "4", optional = true }
slog-term = { version = "2.4.0", optional = true }
criterion = "0.3"
regex = "1"
slog-async = "2.3.0"

[build-dependencies]
tonic-build = { version = "0.6", features = ["rustfmt"] }

[[bin]]
name = "server"
path = "src/server.rs"
