[package]
name = "chubby_server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
atomic-counter = "1.0.1"
prost = "0.9"
prost-types = "0.9"
tokio = { version = "1", features = ["full"] }
tonic = "0.6"
serde = { version = "1.0", features = ["derive", "rc"] }
serde_json = "1.0"
tikv-client = "0.1.0"

[build-dependencies]
tonic-build = { version = "0.6", features = ["rustfmt"] }

[[bin]]
name = "server"
path = "src/server.rs"
